--- a/todo.html
+++ b/todo.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--https://www.youtube.com/watch?v=qmL5FWHLlQU-->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gordon's To-do List</title>
+  <title> To-do List</title>
   <meta name="description" content="Help managing daily activities. Be organized.">
   <link rel="stylesheet" href="todo.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <h3>Gordon's To-do List</h3>
+  <h3> To-do List</h3>
   <div class="todo-grid-parent">
 
     <div>
