--- a/todo.html
+++ b/todo.html
@@ -58,7 +58,7 @@
 
         <table id="todoTable">
           <tr>
-            <td></td>
+            <td>Done</td>
             <td>Date</td>
             <td>Time</td>
             <td>to-do</td>
@@ -66,7 +66,8 @@
               <select id="categoryFilter">
               </select>
             </td>
-            <td></td>
+            <td>Edit</td>
+             <td>Delete</td>
           </tr>
         </table>
 
